@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Default theme implementation to wrap comments.
@@ -30,9 +29,7 @@
  * @see advanced_forum_preprocess_comment_wrapper()
  */
 ?>
-<?php global $language; ?>
-
-<div id="forum-comments" class="<?php print $language->language; ?>">
+<div id="forum-comments" class="<?php print $classes; ?>"<?php print $attributes; ?>>
   <?php print render($content['comments']); ?>
   <?php if ($content['comment_form']): ?>
     <h2 class="title comment-form"><?php print t('Add new comment'); ?></h2>
